style: fixing spacing on mobile

--- a/src/styles/components/menu.module.css
+++ b/src/styles/components/menu.module.css
@@ -104,9 +104,10 @@
 
 @media (max-width: 768px) {
     .menu {
+        background-color: rgba(255, 255, 255, 0.6);
         width: calc(100% - 20px);
         right: 10px;
         left: 10px;
-        bottom: 28px;
+        bottom: 64px;
     }
 }
